--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ hr {
     <p>Babyyyyy</p>
   </div>
   <div class="middle">
-    <h1>Ready for the Surprise ?</h1>
+    <h1>Happy Birthday to the love of My Life</h1>
     <hr>
     <p id="amx" style="font-size:50px"></p>
   </div>
@@ -77,7 +77,7 @@ var days = Math.floor(distance / (1000 * 60 * 60 * 24));
 
  if (distance < 0) {
     clearInterval(countdownfunction);
-    document.getElementById("amx").innerHTML = "HAPPY BIRTHDAY";
+    document.getElementById("amx").innerHTML = "YOU JUST TURNED 22!";
     window.location = "https://photos.app.goo.gl/gzxH8YbtrCRiX6Wb7";
  
 }
