--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@ hr {
 <body>
 <div class="birthdayimg">
   <div class="topleft">
-    <p>Babyyyyy</p>
+    <p>My Dhruviii Babyyyyy</p>
   </div>
   <div class="middle">
-    <h1>Happy Birthday to the love of My Life</h1>
+    <h1>Happy Birthday! <br> I Love You</h1>
     <hr>
     <p id="amx" style="font-size:50px"></p>
   </div>
   <div class="bottomright">
-    </p>With Love,<p>
+    </p>With Love, Aapki Atyachari<p>
   </div>
 </div>
 
@@ -78,7 +78,7 @@ var days = Math.floor(distance / (1000 * 60 * 60 * 24));
  if (distance < 0) {
     clearInterval(countdownfunction);
     document.getElementById("amx").innerHTML = "YOU JUST TURNED 22!";
-    window.location = "https://photos.app.goo.gl/gzxH8YbtrCRiX6Wb7";
+    window.location = "https://photos.app.goo.gl/SwPtbvuwL38APsjc7";
  
 }
 
