--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ hr {
 <body>
 <div class="birthdayimg">
   <div class="topleft">
-    <p>My Dhruviii Babyyyyy</p>
+    <p>Dear Dhruviii Babyyyyy</p>
   </div>
   <div class="middle">
     <h1>Happy Birthday! <br> I Love You</h1>
@@ -60,7 +60,7 @@ hr {
 </div>
 
 <script>
-var countDownDate = new Date("Jan 14, 2025 02:35:00").getTime();
+var countDownDate = new Date("Jan 30, 2025 02:35:00").getTime();
 
 var countdownfunction = setInterval(function() {
 
