--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ var days = Math.floor(distance / (1000 * 60 * 60 * 24));
  if (distance < 0) {
     clearInterval(countdownfunction);
     document.getElementById("amx").innerHTML = "YOU JUST TURNED 22!";
-    window.location = "https://photos.app.goo.gl/SwPtbvuwL38APsjc7";
+    window.location = " ";
  
 }
 
